# mcts-llm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.ci.yaml  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: link.yml  unit_tests.yml
examples/: demo.py
mcts_llm/: logger.py  mcts.py  mctsr.py  utils.py
notebooks/: evaluate.ipynb  evaluate_qwen25-7b-instruct.ipynb  finetune.ipynb  finetune_qwen25-7b-instruct.ipynb  miprov2_mctsr.json  miprov2_mctsr_qwen25-7b-instruct.json
scripts/: run_ci.sh
tests/: test_mcts.py  test_mctsr.py  test_utils.py
